--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "expo": "^49.0.3",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~14.4.2",
     "expo-font": "^11.4.0",
     "expo-linking": "~5.0.2",
