Changed map placeholder in home

--- a/app.json
+++ b/app.json
@@ -5,7 +5,17 @@
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "@rnmapbox/maps",
+        {
+          "RNMapboxMapsImpl": "mapbox",
+
+          "RNMapboxMapsDownloadToken": "sk.ey...qg"
+        },
+      "expo-location",
+        {
+          "locationWhenInUsePermission": "Show current location on map."
+        }
     ],
     "name": "CrowdFlow_Mobile",
     "slug": "CrowdFlow_Mobile"
