--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rnmapbox/maps": "^10.0.13",
     "axios": "^1.5.0",
     "expo": "^49.0.3",
     "expo-cli": "^6.3.10",
