--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "expo-location": "~16.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
