--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "expo-constants": "~14.4.2",
     "expo-font": "^11.4.0",
     "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
-    "expo-location": "~16.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^4.1.4",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
