--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@rnmapbox/maps": "^10.0.13",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "expo": "^49.0.3",
     "expo-cli": "^6.3.10",
     "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.10",
     "expo-font": "^11.4.0",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
@@ -34,8 +36,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-dev-client": "~2.4.10"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
